src/objects/MT_MediaMotive__c.object
<CustomObject>
    <description>Definiert ein Werbe-Motiv, das im TV ausgestrahlt werden kann. Die Datensätze werden über die Flightplanung gepflegt.</description>
    <fields>
        <fullName>MT_AdvertisedMediaProduct_ref__c</fullName>
        <description>Das Produkt, das mit dem Motiv beworben wird.</description>
        <label>Advertised Media Product</label>
        <referenceTo>MT_AdvertisedMediaProduct__c</referenceTo>
        <relationshipLabel>Media Motives</relationshipLabel>
        <relationshipName>MT_MediaMotives</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>MT_AgencyProductNumber__c</fullName>
        <description>Die Produktionsnummer der Agentur.</description>
        <label>Agency Product Number</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MT_GEMA__c</fullName>
        <description>GEMA- Informationen zu dem Motiv.</description>
        <label>GEMA</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MT_IsComplete__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Zeigt an, ob alle Informationen vollständig hinterlegt wurden. Wird in der Flightplanung manuell durch den Bearbeiter gesetzt.</description>
        <label>Is Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MT_SpotLength__c</fullName>
        <description>Die zeitliche Länge des Motivs (in Sekunden).</description>
        <label>Spot Length</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MT_Type__c</fullName>
        <description>Die Art des Motivs: Haupt oder Reminder. Kein Record Type, da es keine funktionale oder logische Unterscheidung zwischen den beiden Arten gibt.</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Main</fullName>
                </value>
                <value>
                    <fullName>Reminder</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MT_UploadID__c</fullName>
        <description>Die Upload- ID des Motivs im Buchungssystem.</description>
        <label>Upload ID</label>
        <type>TextArea</type>
    </fields>
    <label>Media Motive</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Media Motive Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Media Motives</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>